--- a/style.css
+++ b/style.css
@@ -1,17 +1,13 @@
-
-
-
-
 header {
   font-family: "Inter", sans-serif;
   font-size: 30px;
 }
-span{
+span {
   color: rgb(245, 245, 245);
 }
 header p {
-  font-family: 'Poppins', sans-serif;
-  font-weight:100;
+  font-family: "Poppins", sans-serif;
+  font-weight: 100;
 }
 .container img {
   width: 100%;
@@ -27,7 +23,7 @@ header p {
   padding-right: 174px;
 }
 .btn {
-  background: #18a0c2;
+  background: #ff5959;
   color: white;
   font-size: 25px;
   padding: 10px;
@@ -37,13 +33,16 @@ header p {
 body {
   font-family: "Inter", sans-serif;
 }
+ body h1{
+  font-size: 45px;
+}
 #donate-title {
   text-align: center;
 }
 
 .donate-section p {
   text-align: center;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 .taka-containr {
   display: flex;
@@ -80,8 +79,6 @@ button {
 #btn-container {
   display: block;
   margin-left: 590px;
-
-
 }
 
 /* plan-section----------------------------------- */
@@ -94,7 +91,7 @@ button {
 }
 .plan-titile p {
   text-align: center;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 .icon-container {
   display: flex;
@@ -102,8 +99,8 @@ button {
   gap: 20px;
   margin-top: 80px;
 }
-.icon-container p{
-  font-family: 'Poppins', sans-serif;
+.icon-container p {
+  font-family: "Poppins", sans-serif;
 }
 .icon img {
   width: 50px;
@@ -135,19 +132,67 @@ button {
 }
 
 /* footer section */
-.footer-container{
+.footer-container {
   display: flex;
   align-items: center;
   flex-direction: column;
-  background-color: #0B0D17;
+  background-color: #0b0d17;
   color: white;
   margin-top: 80px;
- 
+}
+footer h2 {
+  font-family: "Lobster", cursive;
+}
+footer p {
+  font-family: "Poppins", sans-serif;
+}
+
+/* update section */
+#update-titile {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 80px;
+}
+#update-titile p{
+  font-family: "Poppins", sans-serif;
+}
+
+#support-sylhet{
+  color: goldenrod;
   
 }
-footer h2{
-  font-family: 'Lobster', cursive;
+#box{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 800px;
+  height: 200px;
+  background-color: #FFF4D6;
+  margin-top: 60px;
+ 
+
 }
-footer p{
-  font-family: 'Poppins', sans-serif;
+#box input{
+  width: 200px;
+  height: 30px;
+  background-color: #D9D9D9;
+  border: 0px;
+  position: relative;
+  left: 4px;
+  
+  
+}
+.form-container{
+  display: flex;
+  justify-content: center;
+}
+#Subscribe-btn{
+  background-color: #FF5959;
+  color: #ffffff;
+  margin: 0px;
+  border: 0px;
+  padding: 8px;
+  gap: 0px;
+  font-size: small;
 }
