--- a/style.css
+++ b/style.css
@@ -38,11 +38,13 @@ body {
 }
 #donate-title {
   text-align: center;
+  color: goldenrod;
 }
 
 .donate-section p {
   text-align: center;
   font-family: "Poppins", sans-serif;
+
 }
 .taka-containr {
   display: flex;
@@ -88,10 +90,12 @@ button {
 .plan-titile h1 {
   display: flex;
   justify-content: center;
+  color: goldenrod;
 }
 .plan-titile p {
   text-align: center;
   font-family: "Poppins", sans-serif;
+  
 }
 .icon-container {
   display: flex;
@@ -131,21 +135,6 @@ button {
   font-size: small;
 }
 
-/* footer section */
-.footer-container {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  background-color: #0b0d17;
-  color: white;
-  margin-top: 80px;
-}
-footer h2 {
-  font-family: "Lobster", cursive;
-}
-footer p {
-  font-family: "Poppins", sans-serif;
-}
 
 /* update section */
 #update-titile {
@@ -153,9 +142,11 @@ footer p {
   flex-direction: column;
   align-items: center;
   margin-top: 80px;
+  
 }
 #update-titile p{
   font-family: "Poppins", sans-serif;
+  
 }
 
 #support-sylhet{
@@ -196,4 +187,21 @@ footer p {
   padding: 8px;
   gap: 0px;
   font-size: small;
+}
+
+
+/* footer section */
+.footer-container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  background-color: #0b0d17;
+  color: white;
+  margin-top: 80px;
+}
+footer h2 {
+  font-family: "Lobster", cursive;
+}
+footer p {
+  font-family: "Poppins", sans-serif;
 }
